# ankle-to-floor-optimization

./: README.md  main.py  pyproject.toml  requirements.txt  specs.md
ankles2floor/: __init__.py  config.py  core.py  optimization.py
ankles2floor/pipeline/: __init__.py  compute_acceleration.py  compute_velocity.py  determine_ankle_state.py  interpolate_positions.py  smooth_positions.py
datasets/: bcn-finals-2022-fem-ankle-and-shot-data.md  bcn-finals-2022-fem-ankles-in-floor-annotations.csv  bcn-finals-2022-fem-ankles-in-floor-annotations.md
examples/: interpolation_example.py
src/: __init__.py  config.py  file_handler.py  objective_function.py
src/pipeline/: __init__.py  a_load_data.py  b_smooth_positions.py  c_compute_vel.py  d_compute_acc.py  e_determine_ankle_state.py
